--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-body{
-    
-    background: #ccc;
-}
+
 #header a:hover
 {
     color: fff;
@@ -16,8 +13,9 @@ body{
 
 #About
 {
-    
-    background:#ccc;
+    background-color: #ccc;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
     min-height: 400px;
 }
 .navbar
@@ -26,11 +24,12 @@ body{
 }
 .profile-pic
 {
-    min-height: 100px;
+    min-height: 60px;
     width: 200px;
 }
 .fa
 {
+    align-items: center;
     color: #fff;
 }
 #Skills span {
@@ -49,17 +48,10 @@ body{
 }
 #Skills
 {
-    background-color: #ccccce;
+    background-color: #ffffff;
 }
-#Experience span 
-{
-    padding: 10px 20px 10px 20px;
-}
-#Experience hr
-{
-    border-width: 2px;
-    margin-top: 06px ;
-}#ContactMe span
+
+#ContactMe span
 {
     padding: 10px 20px 10px 20px;
 }
@@ -67,8 +59,53 @@ body{
     border-width: 2px;
     margin-top: 06px ;
 }
-#home
+.about-sec span
 {
-   
-    width: 100%;
+    padding: 10px 20px 10px 20px;
+}
+#about-se
+{
+    background-color: #ccc;
+}
+.about-sec hr{
+    border-width: 2px;
+    margin-top: 06px ;
+}
+#Home
+{
+   background:rgb(255, 255, 255);
+   background-repeat: no-repeat;
+   width: 100%;
+   min-height: 500px;
+
+    
+}
+.welcome-text
+{
+    
+    padding-top: 8rem;
+    color: rgb(187, 20, 20);
+    
+}
+.content
+{
+    padding-top: 3rem;
+    color: rgba(20, 20, 22, 0.61);
+}
+.welcome-name
+{
+    padding-top: 3rem;
+
+    
+}
+
+#ContactMe
+{
+    background-color: #ccc;
+    padding-bottom: 2rem;
+    padding-top: 2rem;
+}
+.footer1
+{
+    text-align: center;
 }
